@@ -314,10 +314,10 @@ namespace MeGUI
                     StreamWriter hfyuWrapper = new StreamWriter(inputAVS, false, Encoding.Default);
                     String strDLLPath = Path.Combine(Path.GetDirectoryName(MainForm.Instance.Settings.FFMSIndexPath), "ffms2.dll");
 #if x86
-                    hfyuWrapper.WriteLine("LoadPlugin(\"" + strDLLPath + "\")\r\nFFVideoSource(\"" + hfyuFile + "\")");
+                    hfyuWrapper.WriteLine("LoadPlugin(\"" + strDLLPath + "\")\r\nFFVideoSource(\"" + hfyuFile + "\")" + VideoUtil.getAssumeFPS(0, hfyuFile));
 #endif
 #if x64
-                    hfyuWrapper.WriteLine("LoadCPlugin(\"" + strDLLPath + "\")\r\nFFVideoSource(\"" + hfyuFile + "\")");
+                    hfyuWrapper.WriteLine("LoadCPlugin(\"" + strDLLPath + "\")\r\nFFVideoSource(\"" + hfyuFile + "\")" + VideoUtil.getAssumeFPS(0, hfyuFile));
 #endif
                     hfyuWrapper.Close();
                 }
