@@ -1,3 +1,4 @@
+1935 AssumeFPS() will be added to DirectShow(), DSS2() and FFVideoSource() scripts
 1934 [HD Streams Extractor] the default tracks will be pre-selected based upon the selected languages in the settings
      [Settings] added option to disable the pre-selecting of tracks in the HD Streams Extractor
      [Settings] removed unnecessary OggEnc2 checkbox
